# WareFlow

./: .gitignore  README.md  docker-compose.yml  example.env
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  all.py
backend/app/routers/: __init__.py  auth.py  inventory.py  orders.py  reports.py  suppliers.py  warehouses.py
backend/app/schemas/: app.py  core.py
frontend/: package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/[warehouseId]/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/warehouses/: page.tsx
frontend/src/components/: Logo.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
mobile/: pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/lib/: main.dart
mobile/lib/core/animation/: loading_animation_widget.dart
mobile/lib/core/constants/: app_colors.dart
mobile/lib/core/dummy_data/: dummy_data.dart
mobile/lib/core/get_storage/: get_storage.dart
mobile/lib/core/routes/: app_routes.dart  route_generator.dart
mobile/lib/core/widgets/: custom_action_sheet.dart  custom_app_bar.dart  custom_button.dart  custom_container.dart  custom_general_button.dart  custom_getx_message.dart  custom_icon.dart  custom_search_bar.dart  custom_text.dart  custom_text_field.dart  info_display_row.dart
mobile/lib/features/bottom_navigation/: bottom_navi_controller.dart  bottom_navigation.dart
mobile/test/: widget_test.dart
(+45 files in other folders)
