[project]
name = "WareFlow"
version = "1.3.0"
description = "A modern, full-stack Warehouse Management System designed for multi-tenant environments. It allows organizations to effortlessly manage their inventory, suppliers, orders, and teams with granular permissions, real-time analytics, and a beautiful sleek interface."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
